Use collector instead of toList